# Kashelok

./: .env.example  .gitignore  .gitlab-ci.yml  deployment.prod.yml  docker-compose.yml  pyproject.toml  wsgi-entrypoint.sh
apps/kassa_services/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/kassa_services/migrations/: 0001_initial.py
apps/news/: models.py  views.py
apps/news/migrations/: 0001_initial.py
apps/payment/: admin.py  models.py
apps/payment/migrations/: 0001_initial.py
apps/users/: managers.py  mixins.py  models.py  services.py  views.py
apps/users/migrations/: 0001_initial.py
core/: exceptions.py  settings.py  urls.py
integrations/kassa24/: apps.py  helpers.py  mixins.py  permission.py  serializers.py  services.py  urls.py  views.py
integrations/paysys/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
integrations/paysys/migrations/: 0001_initial.py
koshelek-mvp/: .flake8  Dockerfile  README.md  docker-compose.yml  pyproject.toml
koshelek-mvp/apps/news/: serializers.py  urls.py
koshelek-mvp/apps/news/migrations/: 0001_initial.py
koshelek-mvp/apps/payments/: helpers.py  mixins.py  models.py  permission.py  serializers.py  services.py  urls.py  views.py
koshelek-mvp/apps/payments/migrations/: 0001_initial.py  0002_initial.py  (+2 more)
koshelek-mvp/apps/paysys/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
koshelek-mvp/apps/users/: models.py  serializers.py  tasks.py  urls.py
koshelek-mvp/core/: settings.py  urls.py
koshelek-mvp/docker/nginx/: nginx.conf
(+4 files in other folders)
